--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   "dependencies": {
     "bmaplib.curveline": "^1.0.0",
     "bmaplib.heatmap": "^1.0.4",
-    "bmaplib.lushu": "^1.0.7",
+    "bmaplib.lushu": "github:cnaspx/BMapLib.LuShu",
     "bmaplib.markerclusterer": "^1.0.13",
     "markdown-it": "^8.4.0"
   }
