--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ after_script:
   - cp ./docs/favicon.png ./dist/
   - cd dist
   - git init
-  - git config user.name "Dafrok"
-  - git config user.email "o.o@mug.dog"
+  - git config user.name "cnaspx"
+  - git config user.email "feelsky@163.com"
   - git add .
-  - git commit -m "Travis build docs"
-  - git push  --force --quiet "https://${GITHUB_TOKEN}@github.com/Dafrok/vue-baidu-map.git" master:gh-pages
+  - git commit -m "Travis build"
+  - git push  --force --quiet "https://${GITHUB_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master
