--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ after_script:
   - git config user.email "feelsky@163.com"
   - git add .
   - git commit -m "Travis build"
-  - git push  --force --quiet "https://${GITHUB_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master
+  - git push  --force --quiet "https://${GITHUB_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master:gh-pages
