--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ script:
   - npm run build
 after_script:
   # - cp ./docs/favicon.png ./dist/
-  # - cd dist
+  - cd ./
   - git init
   - git config user.name "cnaspx"
   - git config user.email "feelsky@163.com"
   - git add .
   - git commit -m "Travis build"
-  - git push  --force --quiet "https://${GITHUB_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master:master
+  - git push  --force --quiet "https://d7d827fd2e46257c24446236ec5316ee8d7da39e@github.com/cnaspx/vue-baidu-map.git" master:gh-pages
