--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,21 @@ script:
   # - npm test
   - npm run build
 after_script:
-  - cp index.js ./docs/
-  - cd docs
-  - git init
-  - git config user.name "cnaspx"
-  - git config user.email "feelsky@163.com"
-  - git add .
-  - git commit -m "Travis build"
-  - git push  --force --quiet "https://${GH_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master:gh-pages
+  # - cp index.js ./docs/
+  # - cd docs
+  # - git init
+  # - git config user.name "cnaspx"
+  # - git config user.email "feelsky@163.com"
+  # - git add .
+  # - git commit -m "Travis build"
+  # - git push  --force --quiet "https://${GH_TOKEN}@github.com/cnaspx/vue-baidu-map.git" master:gh-pages
+  cd "$TRAVIS_BUILD_DIR"
+    # This generates a `web` directory containing the website.
+    make web
+    cd web
+    git init
+    git checkout -b gh-pages
+    git add .
+    git -c user.name='cnaspx' -c user.email='feelsky@163.com' commit -m init
+
+  git push -f -q https://cnaspx:$GH_TOKEN@github.com/cnaspx/vue-baidu-map-gh-pages gh-pages &>/dev/null
