--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ after_script:
     make web
     cd web
     git init
-    git checkout -b gh-pages
+    git checkout -b master
     git add .
     git -c user.name='cnaspx' -c user.email='feelsky@163.com' commit -m init
 
-  git push -f -q https://cnaspx:$GH_TOKEN@github.com/cnaspx/vue-baidu-map-gh-pages gh-pages &>/dev/null
+  git push -f https://cnaspx:$GH_TOKEN@github.com/cnaspx/vue-baidu-map-master master &>/dev/null
