--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,8 @@ script:
   # - npm test
   - npm run build
 after_script:
-  - make publish
-  - cp index.js ./publish/
-  - cd publish
+  - cp index.js ./docs/
+  - cd docs
   - git init
   - git config user.name "cnaspx"
   - git config user.email "feelsky@163.com"
